# affluense

./: .dockerignore  Dockerfile  README.md  example.md  main.py  problem_statement.md  process.py  pyproject.toml  requirements.txt
classifiers/: finbert.py  zeroshort.py
models/: models.py
services/: async_duck_duck_go.py  async_langchain.py  async_ollama.py  async_threadpool_simple_scraper.py
utils/: async_logger.py  config.py  enums.py  helper_functions.py  sync_logger.py  threadpool.py
