[project]
name = "affluense"
version = "0.1.0"
description = "project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "aiologger>=0.7.0",
    "asyncddgs>=0.1.0a1",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.6",
    "torch>=2.8.0",
    "transformers>=4.55.0",
    "uvicorn>=0.35.0",
]
